--- a/class_5/Module5_Feature_Engineering.ipynb
+++ b/class_5/Module5_Feature_Engineering.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -18,10 +18,10 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: scikit-learn in /Users/xinyuanliang/anaconda3/lib/python3.10/site-packages (1.2.1)\n",
-      "Requirement already satisfied: numpy>=1.17.3 in /Users/xinyuanliang/anaconda3/lib/python3.10/site-packages (from scikit-learn) (1.23.5)\n",
-      "Requirement already satisfied: joblib>=1.1.1 in /Users/xinyuanliang/anaconda3/lib/python3.10/site-packages (from scikit-learn) (1.1.1)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Users/xinyuanliang/anaconda3/lib/python3.10/site-packages (from scikit-learn) (2.2.0)\n",
       "Requirement already satisfied: scipy>=1.3.2 in /Users/xinyuanliang/anaconda3/lib/python3.10/site-packages (from scikit-learn) (1.10.0)\n",
+      "Requirement already satisfied: joblib>=1.1.1 in /Users/xinyuanliang/anaconda3/lib/python3.10/site-packages (from scikit-learn) (1.1.1)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in /Users/xinyuanliang/anaconda3/lib/python3.10/site-packages (from scikit-learn) (1.23.5)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Users/xinyuanliang/anaconda3/lib/python3.10/site-packages (from scikit-learn) (2.2.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,16 +58,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('/Users/xinyuanliang/Desktop/MBAN 6110/module_5_feature_engineering_demo.csv')"
+    "df = pd.read_csv('/Users/xinyuanliang/Desktop/MBAN 6110/dataset/module_5_feature_engineering_demo.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "4  20.945017   49           67.864721  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
        "[1000 rows x 7 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[29], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df_std\n",
+      "Cell \u001b[0;32mIn[22], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df_std\n",
       "\u001b[0;31mNameError\u001b[0m: name 'df_std' is not defined"
      ]
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
        "4 -0.772500  1.500282  0.797973  0.753864  1.115887 -0.730499  0.036682"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,6 +544,30 @@
     "\n",
     "# Show the first few rows of transformed dataframe\n",
     "df_pca.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.18072184694119597"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# explained variance ratio for height\n",
+    "pca.explained_variance_ratio_[0]\n",
+    "\n",
+    "# explained variance ratio for weight\n",
+    "pca.explained_variance_ratio_[1]\n"
    ]
   },
   {
@@ -666,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
